# sdl-raycaster

./: .gitignore  CMakeLists.txt  events.cpp  events.hpp  globals.hpp  main.cpp  map.cpp  map.hpp  mapObject.hpp  player.cpp  player.hpp  render.cpp  render.hpp
maps/: map01.txt
src/: events.cpp  events.hpp  main.cpp  map.cpp  map.hpp  render.cpp
